[gd_scene load_steps=5 format=3 uid="uid://x0p4sijuw4ky"]

[ext_resource type="Texture2D" uid="uid://b705nvqhneh1x" path="res://Assets/frames/hidden_frame_blank.png" id="1_dtpqw"]
[ext_resource type="Texture2D" uid="uid://bekc322a0i838" path="res://Assets/frames/green_frame.png" id="2_4q7u0"]
[ext_resource type="Script" uid="uid://b4hb2sy4w5ehl" path="res://Scenes/MemoryTile/MemoryTile.gd" id="2_o5k6v"]
[ext_resource type="Texture2D" uid="uid://cg2lmyrb4ixi8" path="res://Assets/glitch/blockmaker.png" id="3_o5k6v"]

[node name="MemoryTile" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture_normal = ExtResource("1_dtpqw")
script = ExtResource("2_o5k6v")

[node name="FrameImage" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4q7u0")

[node name="ItemImage" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_o5k6v")

[connection signal="pressed" from="." to="." method="_on_pressed"]
